crates/kirin-derive-core-3/src/kirin/builder/snapshots/kirin_derive_core_3__kirin__builder__tests__either_enum.snap
---
source: crates/kirin-derive-core-3/src/kirin/builder/mod.rs
expression: "Builder::default().print(&input)"
---
impl EitherEnum {
    pub fn op_abc<Lang>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<u32>,
    ) -> either_enum_build_result::A
    where
        Lang: ::kirin::ir::Dialect + From<EitherEnum>,
        Lang::TypeLattice: From<SomeLattice>,
    {
        let a_statement_id = context.statement_arena().next_id();
        let value: u32 = value.into();
        let result_0: ResultValue = context
            .ssa()
            .kind(SSAKind::Result(a_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(u32_type))
            .new()
            .into();
        context
            .statement()
            .definition(Self::A { value, result })
            .new();
        either_enum_build_result::A {
            id: a_statement_id,
            result_0,
        }
    }
}
pub mod either_enum_build_result {
    use kirin::ir::{ResultValue, Statement};
    pub struct A {
        pub id: Statement,
        pub result_0: ResultValue,
    }
    impl From<A> for Statement {
        fn from(value: A) -> Self {
            value.id
        }
    }
}
impl From<InnerB> for EitherEnum {
    fn from(value: InnerB) -> Self {
        let field_0 = value;
        Self::B(field_0)
    }
}
