crates/kirin-derive-core-3/src/kirin/builder/snapshots/kirin_derive_core_3__kirin__builder__tests__regular_struct_with_ssa.snap
---
source: crates/kirin-derive-core-3/src/kirin/builder/mod.rs
expression: "Builder::default().print(&input)"
---
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> TestStruct<T, L> {
    pub fn new<Lang>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<T>,
        input_ssa: impl Into<SSAValue>,
    ) -> test_struct_build_result::TestStruct
    where
        Lang: ::kirin::ir::Dialect + From<TestStruct<T, L>>,
        Lang::TypeLattice: From<L>,
    {
        let teststruct_statement_id = context.statement_arena().next_id();
        let value: T = value.into();
        let input_ssa: SSAValue = input_ssa.into();
        let marker: std::marker::PhantomData<L> = std::marker::PhantomData;
        let result: ResultValue = context
            .ssa()
            .kind(SSAKind::Result(teststruct_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        context
            .statement()
            .definition(Self {
                value,
                result,
                input_ssa,
                marker,
            })
            .new();
        test_struct_build_result::TestStruct {
            id: teststruct_statement_id,
            result,
        }
    }
}
pub mod test_struct_build_result {
    use kirin::ir::{ResultValue, Statement};
    pub struct TestStruct {
        pub id: Statement,
        pub result: ResultValue,
    }
    impl From<TestStruct> for Statement {
        fn from(value: TestStruct) -> Self {
            value.id
        }
    }
}
