crates/kirin-derive-core-3/src/kirin/builder/snapshots/kirin_derive_core_3__kirin__builder__tests__simple.snap
---
source: crates/kirin-derive-core-3/src/kirin/builder/mod.rs
expression: "Builder::default().print(&input)"
---
impl SimpleLanguage {
    pub fn op_add<Lang>(
        context: &mut kirin_ir::Context<Lang>,
        field_0: impl Into<SSAValue>,
        field_1: impl Into<SSAValue>,
    ) -> simple_language_build_result::Add
    where
        Lang: kirin_ir::Dialect + From<SimpleLanguage>,
        Lang::TypeLattice: From<SimpleTypeLattice>,
    {
        let add_statement_id = context.statement_arena().next_id();
        let field_0: SSAValue = field_0.into();
        let field_1: SSAValue = field_1.into();
        let result_0: ResultValue = context
            .ssa()
            .kind(SSAKind::Result(add_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(SimpleTypeLattice::Float))
            .new()
            .into();
        context
            .statement()
            .definition(Self::Add(field_0, field_1, field_2))
            .new();
        simple_language_build_result::Add {
            id: add_statement_id,
            result_0,
        }
    }
    pub fn op_constant<Lang>(
        context: &mut kirin_ir::Context<Lang>,
        field_0: impl Into<Value>,
    ) -> simple_language_build_result::Constant
    where
        Lang: kirin_ir::Dialect + From<SimpleLanguage>,
        Lang::TypeLattice: From<SimpleTypeLattice>,
    {
        let constant_statement_id = context.statement_arena().next_id();
        let field_0: Value = field_0.into();
        let result_0: ResultValue = context
            .ssa()
            .kind(SSAKind::Result(constant_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(SimpleTypeLattice::Float))
            .new()
            .into();
        context
            .statement()
            .definition(Self::Constant(field_0, field_1))
            .new();
        simple_language_build_result::Constant {
            id: constant_statement_id,
            result_0,
        }
    }
    pub fn op_return<Lang>(
        context: &mut kirin_ir::Context<Lang>,
        field_0: impl Into<SSAValue>,
    ) -> simple_language_build_result::Return
    where
        Lang: kirin_ir::Dialect + From<SimpleLanguage>,
        Lang::TypeLattice: From<SimpleTypeLattice>,
    {
        let return_statement_id = context.statement_arena().next_id();
        let field_0: SSAValue = field_0.into();
        context.statement().definition(Self::Return(field_0)).new();
        simple_language_build_result::Return {
            id: return_statement_id,
        }
    }
    pub fn op_function<Lang>(
        context: &mut kirin_ir::Context<Lang>,
        field_0: impl Into<Region>,
    ) -> simple_language_build_result::Function
    where
        Lang: kirin_ir::Dialect + From<SimpleLanguage>,
        Lang::TypeLattice: From<SimpleTypeLattice>,
    {
        let function_statement_id = context.statement_arena().next_id();
        let field_0: Region = field_0.into();
        let result_0: ResultValue = context
            .ssa()
            .kind(SSAKind::Result(function_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(SimpleTypeLattice::Float))
            .new()
            .into();
        context
            .statement()
            .definition(Self::Function(field_0, field_1))
            .new();
        simple_language_build_result::Function {
            id: function_statement_id,
            result_0,
        }
    }
}
pub mod simple_language_build_result {
    use kirin_ir::{ResultValue, Statement};
    pub struct Add {
        pub id: Statement,
        pub result_0: ResultValue,
    }
    impl From<Add> for Statement {
        fn from(value: Add) -> Self {
            value.id
        }
    }
    pub struct Constant {
        pub id: Statement,
        pub result_0: ResultValue,
    }
    impl From<Constant> for Statement {
        fn from(value: Constant) -> Self {
            value.id
        }
    }
    pub struct Return {
        pub id: Statement,
    }
    impl From<Return> for Statement {
        fn from(value: Return) -> Self {
            value.id
        }
    }
    pub struct Function {
        pub id: Statement,
        pub result_0: ResultValue,
    }
    impl From<Function> for Statement {
        fn from(value: Function) -> Self {
            value.id
        }
    }
}
