crates/kirin-derive-core-3/src/kirin/builder/snapshots/kirin_derive_core_3__kirin__builder__tests__wrapper_enum.snap
---
source: crates/kirin-derive-core-3/src/kirin/builder/mod.rs
expression: "Builder::default().print(&input)"
---
impl From<InnerA> for WrapperEnum {
    fn from(value: InnerA) -> Self {
        let field_0 = value;
        Self::A(field_0)
    }
}
impl From<InnerB> for WrapperEnum {
    fn from(value: InnerB) -> Self {
        let field_0 = value;
        Self::B(field_0)
    }
}
